# libextend_cxx

./: README.md  meson.build  meson.options  test_cpu_stats
docs/: book.toml
docs/book/: 404.html  chapter_1.html  chapter_2.html  chapter_3.html  chapter_4.html  index.html  print.html  searchindex.js  searchindex.json
docs/src/: Readme.md  SUMMARY.md  chapter_2.md  chapter_3.md  chapter_4.md
include/: cpu_stat.hpp  cpu_stat_factory.hpp  execution_stats.hpp  filesystem_utils.hpp  linux_cpu_info.hpp  matplotlib.hpp  memory_stat_factory.hpp  queue.hpp  random copy.hpp  random.hpp  randomtime.hpp  string_utils.hpp  testing.hpp  vector_utils.hpp  windows_cpu_info.hpp
src/: cpu_stat.cpp
src/linux/: linux_cpu_info.cpp
src/linux/gui/: GraphArea.cpp  GraphArea.hpp  graphing.cpp  meson.build  util.hpp
src/windows/: windows_cpu.info.cpp
test/: cpu_stats_test.cpp  random_test  random_test.cpp  test.cpp  test_cpu_stats.cpp  vector_utils_test.cpp
test/benchmarking/: random_engines_testing.cpp
